@@ -4,7 +4,7 @@ OpenTK 0.3.10 -> 0.3.11
 
 + Bind
 	+ Preliminary support for GLU and GLX.
-	+ Improved generator speed. GLU generation down to 40 seconds (from 6 minutes).
+	+ Improved generator speed. GLU generation down to 5 seconds (from 6 minutes).
 	+ Enhanced overload trimming using Regexes. All endings should be handled correctly now.
 
 + OpenTK
@@ -22,6 +22,8 @@ OpenTK 0.3.10 -> 0.3.11
 	+ OpenGL
 		+ GL.ClearColor() now accepts a System.Drawing.Color
 		+ All function endings are trimmed now (see Bind changelog).
+		+ GCHandles where not freed (bug introduced in 0.3.10).
+		+ Added preliminary GLU bindings. Tesselation not working yet.
 
 + Examples
 	+ Improved ExampleLauncer behavior. Examples are now launched in the main ExampleLauncher thread, and the ExampleLauncher becomes invisible whenever and example is active.
@@ -30,6 +32,7 @@ OpenTK 0.3.10 -> 0.3.11
 	+ Updated the DrawCube() immediate mode functions to use System.Drawing.Colors
 	+ Resolved issue where 'T10: GLSL Cube' example failed with an NRE when compiled with Mono 1.2.x
 	+ Added 'W03: Extensions' example.
+	+ Added 'T04: Lit Cube' example (still needs work).
 
 
 OpenTK 0.3.9 -> 0.3.10
